--- a/evaluating_postfix_expressions/recipe-01/cxx/Makefile
+++ b/evaluating_postfix_expressions/recipe-01/cxx/Makefile
@@ -4,7 +4,7 @@ INCLUDES =
 LDFLAGS = 
 LDLIBS = 
 
-PROGS =	tokens_test
+PROGS =	tokens_test scanner_test
 
 .PHONY: all
 all: $(PROGS)
@@ -16,4 +16,7 @@ clean:
 
 tokens_test: tokens_test.cpp print.hpp tokens.hpp
 	$(CXX) -o $@ tokens_test.cpp $(CXXFLAGS) $(INCLUDES) $(LDFLAGS) $(LDLIBS)
+
+scanner_test: scanner_test.cpp print.hpp scanner.hpp
+	$(CXX) -o $@ scanner_test.cpp $(CXXFLAGS) $(INCLUDES) $(LDFLAGS) $(LDLIBS)
 
