--- a/evaluating_postfix_expressions/recipe-01/cxx/CMakeLists.txt
+++ b/evaluating_postfix_expressions/recipe-01/cxx/CMakeLists.txt
@@ -15,3 +15,11 @@ add_executable(scanner_test
     print.hpp
     input.hpp
     scanner_test.cpp)
+
+add_executable(evaluatorapp 
+    tokens.hpp
+    scanner.hpp
+    model.hpp
+    print.hpp
+    input.hpp
+    evaluatorapp.cpp)
