--- a/evaluating_postfix_expressions/recipe-01/cxx-variant/Makefile
+++ b/evaluating_postfix_expressions/recipe-01/cxx-variant/Makefile
@@ -4,7 +4,7 @@ INCLUDES =
 LDFLAGS = 
 LDLIBS = 
 
-PROGS =	tokens_test scanner_test #evaluatorapp
+PROGS =	tokens_test scanner_test evaluatorapp
 
 .PHONY: all
 all: $(PROGS)
