--- a/evaluating_postfix_expressions/recipe-01/cxx-bignumber/CMakeLists.txt
+++ b/evaluating_postfix_expressions/recipe-01/cxx-bignumber/CMakeLists.txt
@@ -9,10 +9,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/BigNumber)
+
 add_executable(tokens_test 
     tokens.hpp
     print.hpp
     tokens_test.cpp)
+target_include_directories(tokens_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/BigNumber/src)
+target_link_libraries(tokens_test PRIVATE BigNumber)
 
 add_executable(scanner_test 
     tokens.hpp
@@ -20,6 +24,8 @@ add_executable(scanner_test
     print.hpp
     input.hpp
     scanner_test.cpp)
+target_include_directories(scanner_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/BigNumber/src)
+target_link_libraries(scanner_test PRIVATE BigNumber)
 
 add_executable(evaluatorapp 
     tokens.hpp
@@ -28,3 +34,6 @@ add_executable(evaluatorapp
     print.hpp
     input.hpp
     evaluatorapp.cpp)
+target_include_directories(evaluatorapp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/BigNumber/src)
+target_link_libraries(evaluatorapp PRIVATE BigNumber)
+
