--- a/stack/linkedstack/recipe-01/cxx/Makefile
+++ b/stack/linkedstack/recipe-01/cxx/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
-CXXFLAGS = -g3 -Wall -Wextra
-LDFLAGS =
+CXXFLAGS = -g3 -Wall -Wextra -fsanitize=leak -fno-omit-frame-pointer
+LDFLAGS = -lasan
 LDLIBS =
 
 SOURCES = $(shell ls *.cpp)
